--- a/pkp-lib/locale/en_US/editor.xml
+++ b/pkp-lib/locale/en_US/editor.xml
@@ -22,4 +22,5 @@
 	<message key="editor.submission.fileList.includeAllStages">Include all files from all accessible workflow stages.</message>
 	<message key="editor.submission.review.currentFiles">Current Review Files For Round {$round}</message>
 	<message key="editor.review.uploadRevisionToRound">Upload Revised File</message>
+	<message key="editor.submission.returnToSimpleSearch">Return to Simple Search</message>
 </locale>
