--- a/pkp-lib/locale/fr_CA/editor.xml
+++ b/pkp-lib/locale/fr_CA/editor.xml
@@ -22,4 +22,5 @@
 	<message key="editor.submission.fileList.includeAllStages">Inclure tous les fichiers de toutes les étapes de production accessibles.</message>
 	<message key="editor.submission.review.currentFiles">{$round}e série de révision des fichiers.</message>
 	<message key="editor.review.uploadRevisionToRound">Télécharger le fichier évalué </message>
+	<message key="editor.submission.returnToSimpleSearch">Revenir en mode de recherche simple</message>
 </locale>
